--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/iconround"
+        android:label="Tic-Tac-Toe"
+        android:roundIcon="@mipmap/iconround"
         android:supportsRtl="true"
         android:theme="@style/Theme.TresEnRaya"
         tools:targetApi="31">
