--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TresEnRaya"
         tools:targetApi="31">
+
         <activity
             android:name=".GanadorActivity"
             android:exported="false" />
@@ -33,10 +34,17 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Declaración de la nueva actividad para el modo multijugador -->
+        <activity
+            android:name=".MultiplayerTicTacToe"
+            android:exported="true"
+            android:label="Multijugador"
+            android:theme="@style/Theme.TresEnRaya" />
+
     </application>
 
 </manifest>
