--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:theme="@style/Theme.TresEnRaya"
         tools:targetApi="31">
         <activity
+            android:name=".HistorialListener"
+            android:exported="false" />
+        <activity
             android:name=".SeleccionDificultadActivity"
             android:exported="false" />
         <activity
             android:name=".GanadorActivity"
             android:exported="false" />
-
-        <activity android:name=".HistorialManager"
+        <activity
+            android:name=".HistorialManager"
             android:exported="false" />
 
         <meta-data
